UI | img preview fixed aspect ratio to avoid jump

--- a/src/tmp.css
+++ b/src/tmp.css
@@ -1,3 +1,5 @@
+/* #f3b200 */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -27,18 +29,43 @@ code {
   background: #e6e6e6;
 }
 
-.profile-img-wrap img {
-  height: 100%;
-  width: auto;
+.profile-img-wrap > .img-peview-wrap {
+  padding-bottom: 100%; /* 4:3 */
 }
 
 .logo {
   width: 50px;
   height: auto;
+  margin-right: 5px;
 }
 
-.img-peview-wrap img {
-  /* display:block; */
+.img-peview-wrap {
+  background: #e6e6e6;
   width: 100%;
-  height: auto;
+  padding-bottom: 75%; /* 4:3 */
+  position: relative;
+  overflow: hidden;
+}
+
+.img-peview-wrap > div {
+  display: block;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.img-peview-wrap > div > img {
+  width: auto;
+  height: 100%;
+}
+
+.file-input-wrap {
+  max-width: 80%;
+}
+
+.btns > button {
+  width: 100%;
 }
